infrastructure/03-apps/book/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book
spec:
  selector:
    app: book
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
