infrastructure/03-apps/book/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  rules:
  - host: book.foobarbaz.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book
            port:
              number: 80
  tls:
  - hosts:
    - book.foobarbaz.fr
    secretName: book-tls
